--- a/src/components/ChatMessage/ChatMessage.css
+++ b/src/components/ChatMessage/ChatMessage.css
@@ -3,6 +3,10 @@
   margin: 10px;
 }
 
+.justified-right {
+  justify-content: flex-end;
+}
+
 .avatar-container {
   display: flex;
   align-items: center;
@@ -13,7 +17,6 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-
 }
 
 .message {
@@ -33,6 +36,16 @@
   font-weight: 700;
   padding: 10px;
   margin: 0;
-  background-color: rgb(230, 230, 230);
   border-radius: 10px;
+}
+
+.currentUser {
+  color: #fff;
+  background-color: #1185f7;
+
+}
+
+.participant {
+  color: #000;
+  background-color: #e9e9eb;
 }
