--- a/src/components/ChatMessage.css
+++ b/src/components/ChatMessage.css
@@ -9,14 +9,7 @@
 
 .avatar-container {
   display: flex;
-  align-items: center;
-  padding: 10px;
-}
-
-.avatar {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
+  align-items: flex-end;
 }
 
 .message {
